--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ openai
 typing
 selenium
 unstructured
+setuptools==58 # https://stackoverflow.com/questions/69100275/error-while-downloading-the-requirements-using-pip-install-setup-command-use-2
+newscatcher
+feedparser==6.0.0 # https://github.com/kotartemiy/newscatcher/issues/45
